# Snake

./: CMakeLists.txt  main.c  record.txt
inc/: Bonus.h  Frame.h  Obstacle.h  Point.h  mainGame.h  snakeBody.h  snakeInterface.h
src/: Bonus.c  Frame.c  Obstacle.c  Point.c  main.c  mainGame.c  snakeBody.c  snakeInterface.c
